# .xmonad

./: .gitignore  .gitmodules  Makefile  README.md  default.nix  hie.yaml  stack.yaml  test-in-xephyr.sh  xmobarrc  xmonad-samdoshi.cabal
polybar/: config  launch-carbon.sh  launch-cobalt.sh  launch.sh  polybar-world-time.hs  xmonad-polybar-log.hs
src/: BringWorkspace.hs  Config.hs  Flip.hs  GridHelpers.hs  GridSelectConfig.hs  Keys.hs  Layouts.hs  Machines.hs  OneBig.hs  PassPrompt.hs  PolybarConfig.hs  ProgramHelper.hs  PromptConfig.hs  Scratchpads.hs  Solarized.hs  Theme.hs  Tile.hs  Workspaces.hs  XmobarConfig.hs  xmonad.hs
xmobar/: gpg-reload.sh  gpg-status.sh  xmobarrc
