name:                xmonad-samdoshi
version:             0.1.0.0
homepage:            https://github.com/samdoshi/.xmonad
author:              Sam Doshi
copyright:           2016 Sam Doshi
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  -- don't use -threaded
  ghc-options:         -Wall -O2
  main-is:             xmonad.hs
  default-language:    Haskell2010
  other-modules:       Config
                     , Flip
                     , GridHelpers
                     , GridSelectConfig
                     , Keys
                     , Layouts
                     , OneBig
                     , PassPrompt
                     , PolybarConfig
                     , ProgramHelper
                     , PromptConfig
                     , Theme
                     , Tile
                     , Workspaces
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , data-default
                     , dbus
                     , filepath
                     , mtl
                     , process
                     , utf8-string
                     , X11
                     , xmonad
                     , xmonad-contrib

executable xmonad-polybar-log
  hs-source-dirs:      polybar
  ghc-options:         -Wall -O2 -threaded
  main-is:             xmonad-polybar-log.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , dbus